--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./src/assets/fluoride 2.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Doctor Portal</title>
+    <title>Welcome To Doctor Portal</title>
   </head>
   <body class=" scroll-smoth  ">
     <div id="root"></div>
